[gd_scene load_steps=42 format=2]

[ext_resource path="res://Sprites/Ix/ch_shifter002_30_08.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Ix/ch_shifter002_40_08.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Ix/ch_shifter002_20_13.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Ix/ch_shifter002_20_12.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Ix/ch_shifter002_20_25.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Ix/ch_shifter002_20_05.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Ix/ch_shifter002_20_15.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Ix/ch_shifter002_20_16.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Ix/ch_shifter002_40_03.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Ix/ch_shifter002_30_03.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Ix/ch_shifter002_20_23.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Ix/ch_shifter002_40_05.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Ix/ch_shifter002_20_06.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Ix/ch_shifter002_30_04.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Ix/ch_shifter002_20_27.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Ix/ch_shifter002_30_05.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Ix/ch_shifter002_40_06.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Ix/ch_shifter002_40_09.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Ix/ch_shifter002_20_24.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Ix/ch_shifter002_30_09.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Ix/ch_shifter002_20_26.png" type="Texture" id=21]
[ext_resource path="res://Test.gd" type="Script" id=22]
[ext_resource path="res://Sprites/Ix/ch_shifter002_30_35.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Ix/ch_shifter002_30_36.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Ix/ch_shifter002_30_37.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Ix/ch_shifter002_30_07.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Ix/ch_shifter002_30_11.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Ix/ch_shifter002_30_12.png" type="Texture" id=28]
[ext_resource path="res://Sprites/Ix/ch_shifter002_30_13.png" type="Texture" id=29]
[ext_resource path="res://Sprites/Ix/ch_shifter002_30_33.png" type="Texture" id=30]
[ext_resource path="res://Sprites/Ix/ch_shifter002_30_34.png" type="Texture" id=31]
[ext_resource path="res://Sprites/Ix/ch_shifter002_30_06.png" type="Texture" id=32]
[ext_resource path="res://Sprites/Ix/ch_shifter002_30_10.png" type="Texture" id=33]
[ext_resource path="res://Sprites/Ix/ch_shifter002_30_14.png" type="Texture" id=34]
[ext_resource path="res://Sprites/Ix/ch_shifter002_30_38.png" type="Texture" id=35]
[ext_resource path="res://Sprites/Ix/ch_shifter002_30_39.png" type="Texture" id=36]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29.6163, 38.4014 )

[sub_resource type="Animation" id=2]
resource_name = "AttackC1"
length = 0.7
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.24, 0.36, 0.48 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 9 ), ExtResource( 12 ), ExtResource( 17 ), ExtResource( 2 ), ExtResource( 18 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.12, 0.36 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 2, 0 ), Vector2( -1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "AttackC2"
length = 0.7
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.24, 0.36, 0.48 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 14 ), ExtResource( 16 ), ExtResource( 1 ), ExtResource( 20 ), ExtResource( 10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.36 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( -1, 0 ), Vector2( -4, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 2.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 11 ), ExtResource( 19 ), ExtResource( 5 ), ExtResource( 21 ), ExtResource( 15 ), ExtResource( 3 ), ExtResource( 13 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 13 ), ExtResource( 3 ), ExtResource( 15 ), ExtResource( 21 ), ExtResource( 5 ), ExtResource( 19 ), ExtResource( 11 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 13 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.6, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 0, 8 ), Vector2( 0, 0 ), Vector2( 0, 8 ), Vector2( 0, 0 ) ]
}

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 30 ), ExtResource( 31 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 35 ), ExtResource( 36 ) ],
"loop": true,
"name": "Attackb1",
"speed": 10.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 32 ), ExtResource( 26 ), ExtResource( 1 ), ExtResource( 20 ), ExtResource( 33 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 34 ) ],
"loop": true,
"name": "Attackb2",
"speed": 10.0
} ]

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 22 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AttackC1 = SubResource( 2 )
anims/AttackC2 = SubResource( 3 )
anims/Idle = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.599549, 0.599549 )
texture = ExtResource( 14 )
offset = Vector2( -1, 0 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 5 )
animation = "Attackb2"
frame = 5

[node name="Timer" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
